# scrat

./: .gitignore  Cargo.toml  LICENSE  README.md
html/: index.html
src/: actions.rs  command.rs  consts.rs  log.rs  main.rs  register.rs  tui.rs
src/tui/: page_windows.rs  service_windows.rs
