[package]
name = "scrat"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"

[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
mastodon-async = { version = "1.3.2", features = ["all"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
tokio = { version = "1.42.0", features = ["full"] }
futures-util = "0.3.31"
